<!--
  ~ /**
  ~  * Created by DemonApps on 02.03.2022, 0:31
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 02.03.2022, 0:25
  ~  */
  -->

<resources>
    <string name="app_name">Радио Он-лайн</string>
    <string name="buildconfig_version_name">Версия+BuildConfig.VERSION_NAME</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="backward">Back</string>
    <string name="forward">Forw</string>
    <string name="info">Info</string>
    <string name="biker">Biker FM</string>
    <string name="moto">Moto Radio</string>
    <string name="menty">Милицейская волна</string>
    <string name="nashe20">Наше радио 2.0</string>
    <string name="nashe">Наше радио</string>
    <string name="radio1">Радио подмосковья</string>
    <string name="comedy">Comedy FM</string>
    <string name="avto">Авто Радио</string>
    <string name="chocolate">Радио Шоколад</string>
    <string name="souz">Союз FM</string>
    <string name="ultra">Radio Ultra</string>
    <string name="pioner">Пионер FM</string>
    <string name="energy">Радио ENERGY</string>
    <string name="romantika">Радио Романтика</string>
    <string name="relax">Relax FM</string>
    <string name="retro">Ретро ФМ</string>
    <string name="rnr">Rock’n’Roll FM</string>
    <string name="umor">Юмор FM</string>
    <string name="dor">Дорожное Радио</string>
    <string name="diskoteka_sssr">Радио Дискотека СССР</string>
    <string name="hitfm">Хит FM</string>
    <string name="zaicev">Зайцев FM</string>
    <string name="hardradio">Hardradio.com</string>
    <string name="rockstation">Rock Станция</string>
    <string name="nestandart">Нестандарт</string>
    <string name="shock">ШОК</string>
    <string name="panky">Панки хОЙ</string>
    <string name="iskatel">Искатель</string>
    <string name="r13">Радио 13</string>
    <string name="vibor">Выбор</string>
    <string name="proga">О программе</string>
    <string name="group">Группа в ВК</string>
    <string name="otherApps">Ещё приложения</string>
    <string name="video">Клипы</string>
    <string name="share">Поделиться</string>
    <string name="logo">logo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Кимры гараЖ</string>
    <string name="nav_header_subtitle">https://vk.com/kimrygarage</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Клипы</string>
    <string name="autoplay">При включении играть последнее радио</string>
    <string name="konfidecialnost">Политика конфиденциальности</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    https://nashe1.hostingradio.ru/nashepunks.mp3
</resources>