<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by DemonApps on 02.03.2022, 0:31
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 02.03.2022, 0:25
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.demonapps.onlineradio.MainActivity">


    <item
        android:id="@+id/action_settings4"
        android:icon="@android:drawable/presence_video_online"
        android:title="@string/video"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings2"
        android:title="@string/group" />
    <item
        android:id="@+id/action_settings1"
        android:title="@string/proga" />
    <item
        android:id="@+id/action_settings3"
        android:title="@string/otherApps" />
    <item
        android:id="@+id/action_settings5"
        android:title="@string/share" />
</menu>