<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by DemonApps on 19.05.2022, 23:28
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 19.05.2022, 23:28
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_youTube"
            android:icon="@android:drawable/presence_video_online"
            android:title="@string/menu_gallery" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/app_bar_switch"
            android:title="@string/autoplay"
            app:actionLayout="@layout/switch_item"
            android:icon="@android:drawable/ic_menu_preferences"
            app:showAsAction="always" />
    </group>
    <group android:checkableBehavior="single">
        <item
        android:id="@+id/action_settings2"
        android:title="@string/group"
        android:icon="@drawable/ic_kimgar"/>


        <item
            android:id="@+id/action_settings5"
            android:title="@string/share"
            android:icon="@android:drawable/ic_menu_share"/>
        <item
            android:id="@+id/action_settings3"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/otherApps" />
        <item
            android:id="@+id/action_settings1"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/proga" />
    </group>
</menu>