<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cardview_shadow_start_color"
    android:padding="5dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/myScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageVibor"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/vibor"
                    android:src="@drawable/vibor"
                    tools:ignore="ImageContrastCheck" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:progressTint="#FFC400"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btnRadio1"
                    style="@android:style/Widget.Holo.ImageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/radio1"
                    android:onClick="onClickStart"
                    android:scaleType="fitCenter"
                    android:src="@drawable/podmoskovie"
                    android:textSize="12sp"
                    tools:ignore="UsingOnClickInXml"
                    tools:src="@drawable/podmoskovie" />

            </TableRow>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btnNashe"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/nashe"
                        android:onClick="onClickStart"
                        android:scaleType="fitCenter"
                        android:src="@drawable/nashe"
                        android:textSize="12sp"
                        tools:ignore="ContentDescription,UsingOnClickInXml,ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnNashe20"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/nashe20"
                        android:onClick="onClickStart"
                        android:scaleType="fitCenter"
                        android:src="@drawable/nashe20"
                        android:textSize="12sp"
                        tools:ignore="UsingOnClickInXml" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btnAvto"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/avto"
                        android:onClick="onClickStart"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avto"
                        android:textSize="12sp"
                        tools:ignore="UsingOnClickInXml"
                        tools:src="@drawable/avto" />

                    <ImageButton
                        android:id="@+id/btnDfm"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/dfm"
                        android:onClick="onClickStart"
                        android:scaleType="fitCenter"
                        android:src="@drawable/retrofm"
                        android:textSize="12sp"
                        tools:ignore="UsingOnClickInXml"
                        tools:src="@drawable/retrofm" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btnComedy"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/comedy"
                        android:onClick="onClickStart"
                        android:scaleType="fitCenter"
                        android:src="@drawable/comedy"
                        android:textSize="12sp"
                        tools:ignore="UsingOnClickInXml" />

                    <ImageButton
                        android:id="@+id/btnMenty"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/menty"
                        android:onClick="onClickStart"
                        android:scaleType="fitCenter"
                        android:src="@drawable/milicia"
                        android:textSize="12sp"
                        tools:ignore="UsingOnClickInXml"
                        tools:src="@drawable/milicia" />

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/cardview_shadow_start_color">

        <ImageButton
            android:id="@+id/btnPause"
            style="Widget.Holo.ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/resume"
            android:onClick="onClick"
            android:src="@android:drawable/ic_media_pause"
            android:text="@string/pause"
            android:textSize="12sp"
            tools:ignore="ContentDescription, TouchTargetSizeCheck,TouchTargetSizeCheck,UsingOnClickInXml,ImageContrastCheck"
            tools:src="@android:drawable/ic_media_pause" />

        <ImageButton
            android:id="@+id/btnResume"
            style="Widget.Holo.ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pause"
            android:onClick="onClick"
            android:src="@android:drawable/ic_media_play"
            android:text="@string/resume"
            android:textSize="12sp"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,UsingOnClickInXml,ImageContrastCheck"
            tools:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/btnStop"
            style="Widget.Holo.ImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/stop"
            android:onClick="onClick"
            android:src="@android:drawable/picture_frame"
            android:text="@string/stop"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="ContentDescription,TouchTargetSizeCheck,UsingOnClickInXml,ImageContrastCheck" />
    </LinearLayout>

</RelativeLayout>